<resources>
    <string name="app_name">Materials Delivery</string>
    <string name="delivery_adding_menu_item_text">Добавление доставки</string>
    <string name="received_deliveries_menu_item_text">Поставки компании</string>
    <string name="sent_deliveries_menu_item_text">Заказы компании</string>
    <string name="company_info_menu_item_text">Профиль</string>
    <string name="enterNameCity">Введите название города</string>
    <string name="enterNameCompany">Введите название компании</string>
    <string name="input">Sign in</string>
    <string name="auth">Login Account</string>
    <string name="name_company">Имя компании</string>
    <string name="location">Местоположение</string>
</resources>